[package]
name = "queueue"
version = "0.1.1-beta.2"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Queue-like data structures used in rCore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
rand_distr = "0.2.2"
criterion = "0.3.1"

[features]
default = []
std = []

[[bench]]
name = "queue"
path = "benches/queue.rs"
harness = false
